Bug 1216758 - change %ld to %lld for int64 printf argument to fix invalid memory access. r=rjesup, a=sylvestre